# raglab

./: .env.example  .gitignore  LICENSE  README.md  docker-compose.yml  pyproject.toml  requirements.txt
.claude/plans/: graphrag-semantic-std2-plan.md
.data/: .gitkeep  README.md
assets/: aquitecture.excalidraw  chunk_dependencies.excalidraw  chunking.excalidraw  general_workflow.excalidraw  general_workflow_bw.excalidraw  graphrag_index.excalidraw  graphrag_query.excalidraw  preprocessing.excalidraw  query-decomposition.excalidraw  raptor.excalidraw
docs/: getting-started.md
docs/chunking/: README.md  contextual-chunking.md  raptor.md  section-chunking.md  semantic-chunking.md
docs/content-preparation/: README.md
docs/evaluation/: README.md  results.md
docs/preprocessing/: README.md  graphrag.md  hyde.md  query-decomposition.md
docs/visualizations/: graph_filtered.html  graphrag_query_flow.html
memory-bank/: README.md  comparison_chunk_libraries.md  graphrag-architecture-analysis.md  hyde-research.md  model-selection.md  raptor-research.md
memory-bank/content-preparation/: book-structure-analysis.md
memory-bank/evaluation/: evaluation-workflow.md
memory-bank/graphrag/: code_review_report.md  graphrag-reference.md  graphrag-sota-report.md  graphrag_raglab_implementation.md  graphrag_reference_implementation.md  graphrag_sota_report.md  implementation-analysis.md
memory-bank/project_plan/: project-status.md  publish.md  rag-improve-research.md  rag-improvement-plan.md
notebooks/: test_weaviate.ipynb
notebooks/.ipynb_checkpoints/: test_weaviate-checkpoint.ipynb
src/: config.py  prompts.py
src/content_preparation/: __init__.py  extraction.py  segmentation.py
src/evaluation/: __init__.py  analysis_script.py  comprehensive.py  ragas_evaluator.py  schemas.py
src/graph/: __init__.py  auto_tuning.py  centrality.py  community.py  drift.py  extraction.py  extraction_utils.py  leiden.py  (+9 more)
(+67 files in other folders)
